# optitrack_person

./: CMakeLists.txt  README.md  README.txt  package.xml  readme.md
cfg/: OptitrackPerson.cfg
include/optitrack_person/: optitrack_person.h  optitrack_person_full.h
launch/: custom_rosconsole.conf  optitrack.launch  optitrack_person.launch  optitrack_person_full.launch
msg/: or_pose_estimator_motion.msg  or_pose_estimator_reference.msg  or_pose_estimator_state.msg  or_t3d_acc.msg  or_t3d_acc_cov.msg  or_t3d_pos.msg  or_t3d_pos_cov.msg  or_t3d_vel.msg  or_t3d_vel_cov.msg  or_time_ts.msg
scripts/: connect_optitrack.tcl  receive_optitrack.sh
src/: optitrack_human_node.cpp  optitrack_person_node.cpp  optitrack_person_node_full.cpp
