<?xml version="1.0"?>
<package>
  <name>optitrack_human</name>
    
  <version>0.0.1</version>
    
  <description>package to detect humans from optitrack data and pass it to tf</description>

  <maintainer email="harmish@laas.fr">harmish khambhaita</maintainer>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
    
  <!-- <url type="website">http://wiki.ros.org/optitrack_human</url> -->
    
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
    
  <!-- build_depend for packages needed at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>optitrack</build_depend>
  <build_depend>spencer_tracking_msgs</build_depend>
    
  <!-- run_depend for packages needed at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>optitrack</run_depend>
  <run_depend>spencer_tracking_msgs</run_depend>

  <!-- test_depend for packages needed only for testing: -->
  <!--   <test_depend>nose_test</test_depend> -->
    
  <!-- other, unspecified, tags -->
  <export>
    <!-- this is not a metapackage: -->
    <!-- <metapackage/> -->

    <!-- other tools can request additional information be placed here -->
  </export>
</package>