<?xml version="1.0"?>
<package>
  <name>optitrack_person</name>

  <version>0.0.3</version>

  <description>detect personss from optitrack data and publish it as defined by spencer perception modules</description>

  <!-- <author email="harmish@laas.fr">harmish khambhaita</author> -->
  <maintainer email="harmish@laas.fr">harmish khambhaita</maintainer>

  <license>BSD</license>

  <!-- <url type="website">https://github.com/harmishhk/optitrack_person</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <!-- build_depend for packages needed at compile time: -->
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>spencer_tracking_msgs</build_depend>

  <!-- run_depend for packages needed at runtime: -->
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>spencer_tracking_msgs</run_depend>
  <run_depend>optitrack</run_depend>
</package>
